server integration basics complete

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SpaceTraders App</title>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script type="module" src="js/index.js"></script>
     <script type="module">
       // Import Components
       import SpaceTradersHeader from './components/shared/header/header.js'
@@ -18,6 +19,5 @@
     </script>
   </head>
   <body>
-    <space-traders-header></space-traders-header>
   </body>
 </html>
